--- a/elements/index.html
+++ b/elements/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Angular Element Test</title>
     <base href="/">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/forms.css">
 </head>
 
 <body>
