--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,8 @@
-<!doctype html>
-<html lang="en">
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/forms.css">
 
-<head>
-  <meta charset="utf-8">
-  <title>AddressElement</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<!-- <my-app>loading</my-app> -->
 
-<body>
-  <!--<app-root></app-root>-->
-  <address-element company-name="Heartworm" okta-url="https://{yourOktaDomain}" client-id="ahu"></address-element>
-</body>
+<!-- apply Angular Element -->
 
-</html>
+<address-element></address-element>
